<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/vendors"
        android:icon="@drawable/vendor"
        android:letterSpacing="0.10"
        android:title="@string/title_activity_home" />


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/planning"
        android:letterSpacing="0.10"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/guestlist"
        android:letterSpacing="0.10"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/account"
        android:letterSpacing="0.10"
        android:title="@string/title_notifications" />

</menu>
