<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.CreateAccount">

    <TextView
        android:id="@+id/haddering"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/canela_light"
        android:gravity="center"
        android:letterSpacing="0.10"
        android:text="@string/tellusabout"
        android:textColor="@color/heading_text"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/selectrole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:inputType="textPersonName|textCapSentences"
        android:hint="@string/selectyourrole"
        android:letterSpacing="0.10"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:drawableRight="@drawable/expend"
        android:backgroundTint="@color/heading_text"
        android:textColorHint="@color/heading_text"
        android:textColor="@color/heading_text"
        android:textSize="12sp"
        android:fontFamily="@font/apercu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/haddering" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName|textCapSentences"
        android:letterSpacing="0.10"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:drawableRight="@drawable/calendar"
        android:backgroundTint="@color/heading_text"
        android:textColorHint="@color/heading_text"
        android:textColor="@color/heading_text"
        android:hint="@string/weddingdate"
        android:textSize="12sp"
        android:fontFamily="@font/apercu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectrole" />

    <EditText
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword|textCapSentences"
        android:hint="@string/country"
        android:letterSpacing="0.10"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:drawableRight="@drawable/expend"
        android:textColorHint="@color/heading_text"
        android:backgroundTint="@color/heading_text"
        android:textColor="@color/heading_text"
        android:textSize="12sp"
        android:fontFamily="@font/apercu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:inputType="textPersonName|textCapSentences"
        android:hint="@string/town_city"
        android:letterSpacing="0.10"
        android:paddingTop="15dp"
        android:drawableRight="@drawable/expend"
        android:paddingBottom="15dp"
        android:textColorHint="@color/heading_text"
        android:backgroundTint="@color/heading_text"
        android:textColor="@color/heading_text"
        android:textSize="12sp"
        android:fontFamily="@font/apercu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/apercu"
        android:letterSpacing="0.10"
        android:text="@string/signup"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>