<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="11"
        >





        <View
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:background="@color/bodytext" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/apercu"
            android:gravity="center"
            android:text="@string/title_home"
            android:paddingBottom="10dp"
            android:letterSpacing="0.10"
            android:paddingTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="12dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:background="@color/bodytext" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/canela_light"
            android:gravity="center"
            android:paddingBottom="25dp"
            android:letterSpacing="0.10"
            android:paddingTop="25dp"
            android:text="@string/chooseacetorory"
            android:textColor="@color/heading_text"
            android:textSize="26dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:background="@color/bodytext" />







        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/canela_light"
            android:gravity="center|left"
            android:drawableLeft="@drawable/planning_small_icon"
            android:drawableRight="@drawable/navigate"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawablePadding="20dp"
            android:paddingTop="35dp"
            android:letterSpacing="0.10"
            android:paddingBottom="35dp"
            android:text="@string/checklist"
            android:textColor="@color/heading_text"
            android:textSize="22dp" />






        <View
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:background="@color/bodytext" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/canela_light"
            android:gravity="center|left"
            android:drawableLeft="@drawable/planning_small_icon"
            android:layout_marginLeft="20dp"
            android:drawableRight="@drawable/navigate"
            android:drawablePadding="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="35dp"
            android:letterSpacing="0.10"
            android:paddingBottom="35dp"
            android:text="@string/budgeter"
            android:textColor="@color/heading_text"
            android:textSize="22dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:background="@color/bodytext" />









        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/canela_light"
            android:gravity="center|left"
            android:drawableLeft="@drawable/planning_small_icon"
            android:layout_marginLeft="20dp"
            android:drawablePadding="20dp"
            android:paddingTop="35dp"
            android:layout_marginRight="20dp"
            android:drawableRight="@drawable/navigate"
            android:paddingBottom="35dp"
            android:letterSpacing="0.10"
            android:text="@string/timeline"
            android:textColor="@color/heading_text"
            android:textSize="22dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.05dp"
            android:background="@color/bodytext" />


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>