<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.CreateAccount">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/canela_light"
        android:gravity="center"
        android:letterSpacing="0.10"
        android:text="@string/createyoueaccount"
        android:textColor="@color/heading_text"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:inputType="textPersonName|textCapSentences"
        android:hint="@string/full_name"
        android:letterSpacing="0.10"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:backgroundTint="@color/heading_text"
        android:textColorHint="@color/heading_text"
        android:textColor="@color/heading_text"
        android:textSize="12sp"
        android:fontFamily="@font/apercu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName|textCapSentences"
        android:letterSpacing="0.10"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:backgroundTint="@color/heading_text"
        android:textColorHint="@color/heading_text"
        android:textColor="@color/heading_text"
        android:hint="@string/emailaddress"
        android:textSize="12sp"
        android:fontFamily="@font/apercu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword|textCapSentences"
        android:hint="@string/password"
        android:letterSpacing="0.10"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColorHint="@color/heading_text"
        android:backgroundTint="@color/heading_text"
        android:textColor="@color/heading_text"
        android:textSize="12sp"
        android:fontFamily="@font/apercu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:inputType="textPersonName|textCapSentences"
        android:hint="@string/confirmpassword"
        android:letterSpacing="0.10"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColorHint="@color/heading_text"
        android:backgroundTint="@color/heading_text"
        android:textColor="@color/heading_text"
        android:textSize="12sp"
        android:fontFamily="@font/apercu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/apercu"
        android:letterSpacing="0.10"
        android:text="NEXT >"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>