<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">



<data>
    <variable
        name="viewmodel"
        type="com.example.bridegroomed.viewmodel.LoginViewModel" />
</data>




<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".view.Login">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/canela_light"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/heading_text"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/heading_text"
        android:fontFamily="@font/apercu"
        android:hint="@string/emailaddress"
        android:onTextChanged="@{viewmodel::onEmailChanged}"
        android:inputType="textEmailAddress|textCapSentences"
        android:letterSpacing="0.10"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/heading_text"
        android:textColorHint="@color/heading_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.089" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/heading_text"
        android:fontFamily="@font/apercu"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:letterSpacing="0.10"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:onTextChanged="@{viewmodel::onPasswordChanged}"
        android:textColor="@color/heading_text"
        android:textColorHint="@color/heading_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/forgotyourpassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="11sp"
        android:fontFamily="@font/apercu"
        android:gravity="center"
        android:padding="5dp"
        android:letterSpacing="0.10"
        android:editable="false"
        android:textColor="@color/bodytext"
        android:backgroundTint="@color/bodytext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:fontFamily="@font/apercu"
        android:letterSpacing="0.10"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/createaccountbackground"
        android:letterSpacing="0.10"
        android:textSize="12sp"
        android:text="@string/create_your_account"
        android:textColor="@color/heading_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:onClick="@{()->viewmodel.onchangescreen()}"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>


</layout>