<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainModelHome"
            type="com.example.bridegroomed.view.ui.vendorsfrgmnet.VendorsViewModel" />
    </data>



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.vendorsfrgmnet.Vendors">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="11"
      >

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01"
            android:background="@color/bodytext" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/apercu"
                android:gravity="center"
                android:letterSpacing="0.10"
                android:text="@string/findavender"
                android:textColor="@color/bodytext"
                android:textSize="11dp" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/bodytext" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/apercu"
                android:gravity="center"
                android:letterSpacing="0.10"
                android:text="@string/yourvendors"
                android:textColor="@color/bodytext"
                android:textSize="11dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01"
            android:background="@color/bodytext" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:fontFamily="@font/canela_light"
            android:gravity="center"
            android:text="@string/fearures"
            android:textColor="@color/heading_text"
            android:textSize="24dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:id="@+id/recycler_news"
           android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01"
            android:background="@color/bodytext" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:fontFamily="@font/canela_light"
            android:gravity="center"
            android:text="@string/all_vendors"
            android:textColor="@color/heading_text"
            android:textSize="24dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01"
            android:background="@color/bodytext" />




        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:id="@+id/all_vender"


            />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

</layout>